--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,119 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+:root {
+    --font-family-primary: 'Roboto', sans-serif;
+    --font-weight-regular: 400;
+    --font-weight-medium: 500;
+    --font-weight-bold: 700;
+
+    --color-primary: #1D1D1D;
+    --color-secondary: #999999;
+    --color-accent: #f413d9;
+    --color-white: #fff;
+
+    --font-size--2: clamp(0.6944rem, 0.6733rem + 0.1056vi, 0.8rem);
+    --font-size--1: clamp(0.8333rem, 0.8rem + 0.1667vi, 1rem);
+    --font-size-0: clamp(1rem, 0.95rem + 0.25vi, 1.25rem);
+    --font-size-1: clamp(1.2rem, 1.1275rem + 0.3625vi, 1.5625rem);
+    --font-size-2: clamp(1.44rem, 1.3374rem + 0.5131vi, 1.9531rem);
+    --font-size-3: clamp(1.728rem, 1.5853rem + 0.7134vi, 2.4414rem);
+    --font-size-4: clamp(2.0736rem, 1.878rem + 0.9782vi, 3.0518rem);
+    --font-size-5: clamp(2.4883rem, 2.223rem + 1.3264vi, 3.8147rem);
+
+    --grid-gap: 30px;
+    --grid-column-gap: 30px;
+    --grid-row-gap: 30px;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: var(--font-family-primary);
+    font-style: normal;
 }
+
+body {
+    background-color: var(--color-primary);
+    color: #fff;
+    width: 100%;
+}
+
+.main-padding {
+    padding-top: 0;
+    padding-right: var(--wp--preset--spacing--30);
+    padding-bottom: 0;
+    padding-left: var(--wp--preset--spacing--30);
+}
+
+a {
+    color: #fff;
+    opacity: 1;
+    transition: all .3s;
+    
+    &:hover{
+        opacity: .8;
+    }
+}
+
+h1 {
+    font-weight: 500;
+    // font-size: 60px;
+    font-size: var(--font-size-5);
+    line-height: var(--font-size-5);
+}
+
+h2 {
+    font-weight: 500;
+    font-size: 34px;
+    font-size: var(--font-size-4);
+    line-height: var(--font-size-4);
+}
+
+h3 {
+    font-weight: 500;
+    font-size: var(--font-size-3);
+    line-height: var(--font-size-3);
+}
+
+h4,
+h4 a {
+    font-weight: 400;
+    font-size: var(--font-size-2);
+    line-height: var(--font-size-2);
+}
+
+h5 {
+    font-weight: 500;
+    font-size: var(--font-size-1);
+    line-height: var(--font-size-1);
+}
+
+h6 {
+    font-weight: 500;
+    font-size: var(--font-size-0);
+    line-height: var(--font-size-0);
+}
+
+p,
+div,
+a,
+li {
+    font-weight: 400;
+    font-size: var(--font-size-0);
+    line-height: var(--font-size-0);
+}
+
+
+.grid-2-1-1 {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    gap: var(--grid-gap);
+}
+
+.welcome-screen {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    height: 70vh;
+}
+
