--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -145,6 +145,12 @@ li {
     --f-carousel-dot-height: 10px;
     --f-carousel-dot-width: 10px;
 
-    --f-carousel-dots-height: -2px 
-}
+    --f-carousel-dots-height: -2px;
 
+    picture {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: inline-block;
+    }
+}
