--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -110,7 +110,7 @@
     width: 100%;
     height: 100%;
 
-    grid-column: 5 / 13;
+    grid-column: 6 / 13;
 
     .f-carousel {
         height: 100%;
@@ -118,8 +118,8 @@
 }
 
 .post-card__big__gallery__img__source {
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
     height: auto;
-    // aspect-ratio: 4 / 3;
+    aspect-ratio: 4 / 3;
 }
