--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@
     --font-size-4: clamp(2.0736rem, 1.878rem + 0.9782vi, 3.0518rem);
     --font-size-5: clamp(2.4883rem, 2.223rem + 1.3264vi, 3.8147rem);
 
-    --grid-gap: 30px;
+    --grid-gap: 1.88rem;
     --grid-column-gap: 30px;
     --grid-row-gap: 30px;
 }
@@ -112,12 +112,6 @@ li {
     gap: var(--grid-gap);
 }
 
-.welcome-screen {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    height: 70vh;
-}
-
 .f-carousel {
     --f-carousel-slide-width: 100%;
     --f-carousel-spacing: 0;
@@ -153,4 +147,7 @@ li {
         position: relative;
         display: inline-block;
     }
+}
+.f-carousel__dots{
+    z-index: 5;
 }
