--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -1,2 +1,54 @@
+.header__wrapper {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    background: linear-gradient(0deg, rgba(13, 13, 13, 0) 0%, rgba(13, 13, 13, 0.9) 100%);
+}
+
 .header {
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: var(--grid-gap);
+
+    .header__links {
+        grid-column: 6 / 9;
+    }
+
+    .header__links_social {
+        grid-column: 9 / 13;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+}
+
+.header__logo {
+    grid-column: 1/3;
+    text-decoration: none;
+}
+
+
+
+.header__links__list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 0.5rem;
+}
+
+.header__link__item {
+    list-style: none;
+}
+
+.header__link {
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-0);
+    color: #fff;
+    text-decoration: none;
 }
