--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -13,8 +13,7 @@
     box-shadow: 0 -20px 40px 0 rgba(3, 3, 3, 0.5), 0 -5px 10px 0 rgba(0, 0, 0, 0.38);
 
     border-top: 1px solid #999;
-    padding-top: 3.75rem;
-    padding-bottom: 130px;
+    padding: 3.75rem var(--wp--preset--spacing--30) 130px var(--wp--preset--spacing--30);
 }
 
 .post-card__big__content__wrapper {
@@ -69,7 +68,9 @@
     width: 100%;
 }
 
-.post-card__big__meta__item__variable {}
+.post-card__big__meta__item__variable {
+    color: var(--color-secondary);
+}
 
 .post-card__big__meta__item__value {}
 
@@ -90,30 +91,42 @@
 }
 
 .post-card__meta__teaam__imge__source {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: 1px;
-    border: 2.39px solid #0d0d0d;
+    border: 3px solid var(--color-primary);
     border-radius: 152px;
     padding: 3px;
     width: 28px;
     height: 28px;
-    background: #fff;
+    /* background: #fff; */
+    margin: 0;
+    padding: 0;
+
+    &:not(:first-child) {
+        margin-left: -15px;
+
+    }
 }
 
-.post-card__meta__team__name {}
+.post-card__meta__team__name,
+.post-card__meta__team__name a {
+    color: var(--color-secondary);
+}
 
 .post-card__big__gallery {
     position: relative;
     width: 100%;
     height: 100%;
+    max-height: calc(100vh - 190px);
 
     grid-column: 6 / 13;
-
+    
     .f-carousel {
         height: 100%;
+    }
+
+    .f-carousel__slide {
+        &:hover {
+            opacity: 1;
+        }
     }
 }
 
@@ -121,5 +134,49 @@
     object-fit: contain;
     width: 100%;
     height: auto;
-    aspect-ratio: 4 / 3;
+    // aspect-ratio: 4 / 3;
+
+}
+
+@media screen and (max-width: 767px) {
+    .post-card__big {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: flex-end;
+        padding: 0;
+        height: fit-content;
+        position: relative;
+        top: 0;
+    }
+
+    .post-card__big__gallery__img__source {
+        aspect-ratio: 1/1;
+
+        &._cover {
+            object-fit: cover;
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    .post-card__big__content__wrapper {
+        padding: 0 var(--wp--preset--spacing--30) 3rem;
+        gap: 1rem;
+    }
+
+    .post-card__big__content {
+        gap: 2rem;
+    }
+
+    .post-card__big__meta__item {
+        padding: .5rem 0px;
+    }
+
+    .post-card__big__gallery {
+        aspect-ratio: 1 / 1;
+        height: auto;
+        .f-carousel {
+            height: auto;
+        }
+    }
 }
