--- a/blocks/section__welcome-block/_index.scss
+++ b/blocks/section__welcome-block/_index.scss
@@ -10,8 +10,6 @@
 
 .welcome-block__content {
     grid-column: 6 / 13;
-
-    grid-column: 6 / 13;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -21,4 +19,10 @@
     font-size: var(--font-size-2);
     line-height: 110%;
     font-weight: var(--font-weight-regular);
+}
+
+@media screen and (max-width: 767px){
+.welcome-block__content {
+    grid-column: 1 / 13;
+}
 }
