--- a/blocks/section__post-list__archive/_index.scss
+++ b/blocks/section__post-list__archive/_index.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: var(--grid-gap);
     padding: 10rem 0;
+    opacity: .3;
 }
 
 .posts-list__archive__heading {
@@ -19,6 +20,7 @@
 }
 
 .posts-list__archive {
+    filter: blur(4px);
     --f-carousel-slide-width: 39.7% !important;
     --f-carousel-spacing: 1rem !important;
 
