--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -14,6 +14,8 @@
     box-shadow: 0 -20px 40px 0 rgba(3, 3, 3, 0.5), 0 -5px 10px 0 rgba(0, 0, 0, 0.38);
 
     border-top: 1px solid #999;
+    padding: 3.75rem var(--wp--preset--spacing--30) 130px var(--wp--preset--spacing--30);
+
 }
 
 
@@ -24,7 +26,6 @@
     justify-content: space-between;
     flex-direction: column;
     // gap: 138px;
-    padding: 3.75rem var(--wp--preset--spacing--30) 130px var(--wp--preset--spacing--30);
 
     grid-column: 1 / 5;
     position: relative;
@@ -88,9 +89,10 @@
 }
 
 .post-card__big__meta__item__value {
-    a{
+    a {
         font-size: var(--font-size--1);
     }
+
     font-size: var(--font-size--1);
 }
 
@@ -151,7 +153,7 @@
         height: 100vh;
         background: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, #000 30.51%);
         z-index: 0;
-        top: 0;
+        top: -130px;
         left: -50vw;
     }
 
@@ -166,12 +168,12 @@
 }
 
 .post-card__big__gallery {
-    padding: 3.75rem var(--wp--preset--spacing--30) 3.75rem var(--wp--preset--spacing--30);
+    // padding: 3.75rem var(--wp--preset--spacing--30) 3.75rem var(--wp--preset--spacing--30);
 
     position: relative;
     width: 100%;
     height: 100%;
-    max-height: calc(100vh - 75px);
+    max-height: calc(100vh - 190px);
 
     grid-column: 6 / 13;
     z-index: 5;
