--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -1,14 +1,22 @@
 .section__post-list__big {
     display: flex;
     flex-direction: column;
+
 }
 
 .section__post-list__big__wrapper {
     display: flex;
     flex-direction: column;
-    gap: var(--grid-gap);
 }
 
 .section__post-list__big__heading {
-    padding: 0 var(--wp--preset--spacing--30);
+    padding: var(--wp--preset--spacing--30);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.section__post-list__big__heading__count{
+    font-weight: 500;
+    font-size: var(--font-size-3);
+    line-height: var(--font-size-3);
 }
