--- a/blocks/section__welcome-block/_index.scss
+++ b/blocks/section__welcome-block/_index.scss
@@ -11,13 +11,13 @@
 }
 
 .welcome-block__content {
-    grid-column: 6 / 13;
+    grid-column: 5 / 13;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.welcome-block__caption {
+.welcome-block__caption, .welcome-block__caption a {
     font-size: var(--font-size-2);
     line-height: 110%;
     font-weight: var(--font-weight-regular);
