--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -1,23 +1,25 @@
 .header__wrapper {
     width: 100%;
-    position: fixed;
     top: 0;
     z-index: 100;
-    background: linear-gradient(0deg, rgba(13, 13, 13, 0) 0%, rgba(13, 13, 13, 0.9) 100%);
+    grid-column: 1/4;
+    position: sticky;
+    left: 0;
+    top: 0;
+    height: 100vh;
+
+    border-right: 1px solid #999;
 }
 
 .header {
     width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: var(--grid-gap);
-
-    .header__links {
-        grid-column: 6 / 9;
-    }
+    // display: grid;
+    // grid-template-columns: repeat(12, 1fr);
+    // gap: var(--grid-gap);
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: var(--wp--preset--spacing--30);
 
     .header__links_social {
         grid-column: 9 / 13;
@@ -28,18 +30,61 @@
 }
 
 .header__logo {
-    grid-column: 1/3;
     text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
 }
 
+.header__logo__title {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    font-size: var(--font-size-0);
+    line-height: 103%;
+}
 
+.header__logo__caption {
+    font-size: var(--font-size--1);
+    font-weight: var(--font-weight-regular);
+    color: var(--color-secondary);
+}
+
+.header__logo__source {
+    width: 45px;
+    height: 45px;
+    border-radius: 100px;
+}
+
+.header__links {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
 .header__links__list {
     display: flex;
-    align-items: center;
     justify-content: flex-start;
-    flex-direction: row;
-    gap: 0.5rem;
+    flex-direction: column;
+    gap: 5px;
+
+    .header__link__item {
+        position: relative;
+
+        // &:not(:first-child)::before {
+        //     content: "";
+        //     position: absolute;
+        //     width: 4px;
+        //     height: 4px;
+        //     border-radius: 10px;
+        //     background-color: #fff;
+        //     top: 0;
+        //     bottom: 0;
+        //     margin: auto 0;
+        //     left: calc(-0.5rem - 2px);
+        // }
+    }
 }
 
 .header__link__item {
@@ -50,5 +95,4 @@
     font-weight: var(--font-weight-regular);
     font-size: var(--font-size-0);
     color: #fff;
-    text-decoration: none;
 }
