--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -3,18 +3,20 @@
     grid-template-columns: repeat(12, 1fr);
     gap: var(--grid-gap);
     position: relative;
-    height: 100vh;
+    // height: 100vh;
+    height: fit-content;
     overflow: hidden;
 
-    position: sticky;
-    top: 70px;
+    // position: sticky;
+    // top: 70px;
 
     background-color: var(--color-primary);
 
     box-shadow: 0 -20px 40px 0 rgba(3, 3, 3, 0.5), 0 -5px 10px 0 rgba(0, 0, 0, 0.38);
 
     border-top: 1px solid #999;
-    padding: 3.75rem var(--wp--preset--spacing--30) 130px var(--wp--preset--spacing--30);
+    border-bottom: 1px solid #999;
+    padding: var(--wp--preset--spacing--30);
 
 }
 
@@ -30,7 +32,7 @@
     grid-column: 1 / 5;
     position: relative;
     z-index: 10;
-
+    padding-right: 1rem;
     // background-color: #000000a6;
     // backdrop-filter: blur(20px);
 
@@ -75,7 +77,7 @@
 
 .post-card__big__meta__item {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
     gap: 22px;
 
     border-top: 1px solid #999;
@@ -130,6 +132,7 @@
 
 .post-card__meta__team__name,
 .post-card__meta__team__name a {
+    font-size: var(--font-size--1);
     color: var(--color-secondary);
 }
 
@@ -149,12 +152,12 @@
     &::after {
         content: "";
         position: absolute;
-        width: 70vw;
-        height: 100vh;
+        width: 100%;
+        height: 150%;
         background: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, #000 30.51%);
         z-index: 0;
-        top: -130px;
-        left: -50vw;
+        top: -2rem;
+        left: -74%;;
     }
 
     .f-carousel__viewport.is-draggable {
@@ -173,9 +176,10 @@
     position: relative;
     width: 100%;
     height: 100%;
-    max-height: calc(100vh - 190px);
+    // max-height: calc(100vh - 190px);
+    max-height: calc(100vh - 350px);
 
-    grid-column: 6 / 13;
+    grid-column: 5 / 13;
     z-index: 5;
 
     .f-carousel {
