--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -96,3 +96,40 @@
     font-size: var(--font-size-0);
     color: #fff;
 }
+
+@media screen and (max-width: 1220px) {
+    .header__wrapper {
+        grid-column: 1/5;
+
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header__wrapper {
+        position: relative;
+        height: fit-content;
+        border: none;
+        border-bottom: 1px solid #999;
+    }
+
+    .header {
+        padding-bottom: 4rem;
+    }
+
+    .header__logo {
+        gap: 13px;
+    }
+
+    .header__logo__title {
+        font-size: var(--font-size-2);
+    }
+
+    .header__logo__caption {
+        font-size: var(--font-size-1);
+    }
+
+    .header__logo__source {
+        width: 55px;
+        height: 55px;
+    }
+}
