--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -10,7 +10,7 @@
 }
 
 .section__post-list__big__heading {
-    padding: var(--wp--preset--spacing--30);
+    padding: var(--padding);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
