--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    padding: var(--wp--preset--spacing--30);
+    padding: var(--padding);
 
     .header__links_social {
         grid-column: 9 / 13;
