--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -8,7 +8,8 @@
     top: 0;
     height: 100vh;
 
-    border-right: 1px solid #999;
+    border-right: 1px solid var(--color-gray-dark);
+
 }
 
 .header {
@@ -18,9 +19,11 @@
     // gap: var(--grid-gap);
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    padding: var(--padding);
-
+    justify-content: space-between;
+    height: 100%;
+    overflow-y: auto;
+    background-color: rgb(0 0 0 / 58%);
+    backdrop-filter: blur(var(--backdrop-filter-card));
     .header__links_social {
         grid-column: 9 / 13;
         display: flex;
@@ -29,72 +32,101 @@
     }
 }
 
-.header__logo {
+.header__top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5rem 1rem;
+    border-bottom: 1px solid var(--color-gray-dark);
+    position: sticky;
+    top: 0;
+    // background-color: var(--color-primary);
+    width: 100%;
+}
+
+.header__top__logo {
     text-decoration: none;
+
+    h1 {
+        font-size: var(--font-size-1);
+        line-height: 110%;
+    }
+}
+
+.header__top__burger {
+    cursor: pointer;
+}
+
+.header__description {
+    padding: 1.5rem 1rem;
+
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.header__description__avatar {
     display: flex;
     flex-direction: row;
     gap: 10px;
     align-items: center;
 }
 
-.header__logo__title {
+.header__description__avatar__source {
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    object-fit: cover;
+}
+
+.header__description__avatar__title {
     display: flex;
     flex-direction: column;
     gap: 3px;
-    font-size: var(--font-size-0);
-    line-height: 103%;
+
 }
 
-.header__logo__caption {
+.header__description__avatar__title_name {
+    font-size: var(--font-size-0);
+}
+
+.header__description__avatar__title_caption {
     font-size: var(--font-size--1);
-    font-weight: var(--font-weight-regular);
     color: var(--color-secondary);
 }
 
-.header__logo__source {
-    width: 45px;
-    height: 45px;
-    border-radius: 100px;
-}
-
-.header__links {
+.header__bottom {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
 }
 
-.header__links__list {
+.header__bottom__links {
     display: flex;
-    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px 20px;
+    border-top: 1px solid var(--color-gray-dark);
+    padding: 1.5rem 1rem;
+
+}
+
+.header__bottom__links__item {
+    list-style: none;
+
+    .header__bottom__links__item__link {}
+}
+
+.header__bottom__year {
+    padding: 1.5rem 1rem;
+
+    color: var(--color-secondary);
+    font-size: var(--font-size--1);
+    display: flex;
     flex-direction: column;
     gap: 5px;
-
-    .header__link__item {
-        position: relative;
-
-        // &:not(:first-child)::before {
-        //     content: "";
-        //     position: absolute;
-        //     width: 4px;
-        //     height: 4px;
-        //     border-radius: 10px;
-        //     background-color: #fff;
-        //     top: 0;
-        //     bottom: 0;
-        //     margin: auto 0;
-        //     left: calc(-0.5rem - 2px);
-        // }
-    }
-}
-
-.header__link__item {
-    list-style: none;
-}
-
-.header__link {
-    font-weight: var(--font-weight-regular);
-    font-size: var(--font-size-0);
-    color: #fff;
+    border-top: 1px solid var(--color-gray-dark);
 }
 
 @media screen and (max-width: 1220px) {
