--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -179,7 +179,7 @@ div {
     }
 
     .f-carousel__nav button {
-        backdrop-filter: blur(4px);
+        // backdrop-filter: blur(4px);
     }
 }
 
@@ -271,7 +271,7 @@ body {
 
 #main {
     grid-column: 4/13;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 @media screen and (max-width: 1220px) {
