--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -1,22 +1,25 @@
-.section__post-list__big {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-}
-
 .section__post-list__big__wrapper {
     display: flex;
     flex-direction: column;
+    // overflow: hidden;
+    // height: fit-content;
 
     .post-card__big {
-        &:not(:first-child){
+        &:not(:first-child) {
             padding-top: 3rem;
         }
+
         &:first-child {
             border-top: 0;
         }
     }
 
+}
+
+.section__post-list__big {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
 }
 
 .section__post-list__big__heading {
