--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -22,8 +22,8 @@
     justify-content: space-between;
     height: 100%;
     overflow-y: auto;
-    background-color: rgb(0 0 0 / 58%);
-    backdrop-filter: blur(var(--backdrop-filter-card));
+    // background-color: rgb(0 0 0 / 58%);
+    // backdrop-filter: blur(var(--backdrop-filter-card));
     .header__links_social {
         grid-column: 9 / 13;
         display: flex;
