--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -30,7 +30,7 @@
     gap: 1rem;
     background-color: rgb(0 0 0 / 58%);
     background-color: var(--color-background-card);
-    backdrop-filter: blur(var(--backdrop-filter-card));
+    // backdrop-filter: blur(var(--backdrop-filter-card));
     height: fit-content;
     /* border-radius: 20px; */
 }
@@ -138,31 +138,22 @@
     left: 0;
     bottom: 0;
     right: 0;
-    margin: 0;
+    margin: auto;
     z-index: 0;
     filter: blur(68px);
-    opacity: .25;
+    opacity: .3;
+    overflow: visible;
 
     &* {
         pointer-events: none;
     }
 
-    // &::after {
-    //     content: "";
-    //     position: absolute;
-    //     width: 100%;
-    //     height: 100%;
-    //     background: linear-gradient(270deg, rgba(0, 0, 0, 0) 0%, #000 30.51%);
-    //     z-index: 0;
-    //     top: 0;
-    //     left: -52%;
-    // }
-
-    .f-carousel__viewport.is-draggable {
-        overflow: visible;
+    .post-card__big__gallery__background__source {
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 4/3;
+        object-fit: cover;
     }
-
-    .post-card__big__gallery__img__source {}
 }
 
 .post-card__big__gallery {
