--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -1,2 +1,10 @@
-.footer {
+
+footer {
+    grid-column: 4/13;
+    // overflow-x: hidden;
+}
+@media screen and (max-width: 1220px) {
+    footer {
+        grid-column: 5/13;
+    }
 }
