--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -3,6 +3,7 @@
     top: 0;
     z-index: 100;
     grid-column: 1/4;
+    grid-row: 1/3;
     position: sticky;
     left: 0;
     top: 0;
@@ -22,6 +23,7 @@
     justify-content: space-between;
     height: 100%;
     overflow-y: auto;
+
     // background-color: rgb(0 0 0 / 58%);
     // backdrop-filter: blur(var(--backdrop-filter-card));
     .header__links_social {
@@ -65,6 +67,14 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.header__description__content {
+    a {
+        color: var(--color-secondary);
+    }
+
+    color: var(--color-secondary);
 }
 
 .header__description__avatar {
