--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -150,7 +150,7 @@
 
     .post-card__big__gallery__background__source {
         width: 100%;
-        height: 100%;
+        height: auto;
         aspect-ratio: 4/3;
         object-fit: cover;
     }
