--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -19,18 +19,42 @@
 .section__post-list__big {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 4rem;
 }
 
 .section__post-list__big__heading {
     padding: var(--padding);
+    padding: 1.5rem var(--padding);
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    z-index: 10;
 }
 
 .section__post-list__big__heading__count {
     font-weight: 500;
-    font-size: var(--font-size-3);
-    line-height: var(--font-size-3);
+    font-size: var(--font-size-2);
+    line-height: var(--font-size-2);
+}
+
+@media screen and (max-width: 1220px) {
+    .section__post-list__big{
+        gap: 2rem;
+    }
+    .section__post-list__big__wrapper {
+        .post-card__big {
+            border-bottom: 0;
+
+            &:not(:first-child) {
+                padding-top: 0;
+            }
+
+            &:first-child {
+                border-top: 0;
+            }
+        }
+
+    }
+
 }
