--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -1,8 +1,45 @@
-
 footer {
     grid-column: 4/13;
     // overflow-x: hidden;
+    margin-top: 5rem;
+    border-top: 1px solid var(--color-gray-dark);
 }
+
+.footer {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__links {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px 20px;
+    padding: var(--padding);
+
+    li {
+        list-style: none;
+
+    }
+
+}
+
+// .footer__links___item {
+
+//     .footer__links___item__link {}
+// }
+
+.footer__decor {
+    width: 100%;
+    padding: var(--padding);
+
+    svg {
+        width: 100%;
+        height: auto;
+        fill: #fff, linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(6, 6, 6, 0.5) 22.78%, #0d0d0d 84.29%);
+    }
+}
+
 @media screen and (max-width: 1220px) {
     footer {
         grid-column: 5/13;
