--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -26,13 +26,10 @@
     grid-column: 9 / 13;
     position: relative;
     z-index: 10;
-    padding: 20px;
+    // padding: 20px;
     gap: 1rem;
-    background-color: rgb(0 0 0 / 58%);
-    background-color: var(--color-background-card);
-    // backdrop-filter: blur(var(--backdrop-filter-card));
+    // background-color: var(--color-background-card);
     height: fit-content;
-    /* border-radius: 20px; */
 }
 
 .post-card__big__content {
@@ -88,6 +85,8 @@
 .post-card__big__meta__item__value {
     a {
         font-size: var(--font-size--1);
+
+
     }
 
     font-size: var(--font-size--1);
@@ -99,6 +98,7 @@
     justify-content: flex-start;
     flex-direction: row;
     gap: 8px;
+    position: relative;
 }
 
 .post-card__meta__team__images__wrapper {
@@ -112,6 +112,8 @@
 .post-card__meta__teaam__imge__source {
     // border: 3px solid var(--color-primary);
     border: 3px solid rgb(47, 47, 47);
+    border: 3px solid #1A1A1A;
+    border: 3px solid var(--color-primary);
     border-radius: 152px;
     padding: 3px;
     width: 28px;
@@ -121,28 +123,58 @@
     padding: 0;
 
     &:not(:first-child) {
-        margin-left: -15px;
+        margin-left: -13px;
+    }
 
+    &:first-child {
+        z-index: 5;
+    }
+
+    &:nth-child(2) {
+        z-index: 4;
+    }
+
+    &:nth-child(3) {
+        z-index: 3;
+    }
+
+    &:nth-child(2) {
+        z-index: 2;
     }
 }
 
-.post-card__meta__team__name,
-.post-card__meta__team__name a {
+.post-card__meta__team__name {
     font-size: var(--font-size--1);
     color: var(--color-secondary);
+
+    a {
+        font-size: var(--font-size--1);
+        color: var(--color-secondary);
+
+        &:hover {
+            color: var(--color-link-hover);
+        }
+    }
 }
 
 .post-card__big__gallery__background {
     position: absolute !important;
     top: 0;
-    left: 0;
+    // left: calc(-1 * var(--padding));
     bottom: 0;
-    right: 0;
-    margin: auto;
     z-index: 0;
-    filter: blur(68px);
-    opacity: .3;
+    filter: blur(60px);
+    opacity: .45;
     overflow: visible;
+    width: 100%;
+    height: 100%;
+    padding-left: var(--padding);
+    top: 50%;
+    bottom: 50%;
+    right: 50%;
+    left: 50%;
+    // transform: scale(1.2) translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 
     &* {
         pointer-events: none;
@@ -250,9 +282,10 @@
     }
 
     .post-card__big__content__wrapper {
-        padding: 20px;
+        // padding: 20px;
+        // margin: 0 1rem;
+        padding: var(--padding);
         gap: 1rem;
-        margin: 0 1rem;
     }
 
     .post-card__big__content {
@@ -277,9 +310,17 @@
         }
 
     }
+
+    .post-card__big__gallery__background {
+        padding: 0;
+    }
 }
 
 @media screen and (max-width: 600px) {
+    .post-card__big__gallery__background {
+        overflow-x: hidden;
+    }
+
     .post-card__big__gallery {
         .f-carousel {
             height: auto;
